# ModemManager

./: .gitignore  configure.ac
cli/: mmcli-modem-signal.c
data/: ModemManager.service.in
examples/: Makefile.am
examples/location-watcher/: Makefile.am  location-watcher.c
introspection/: org.freedesktop.ModemManager1.Modem.Location.xml  org.freedesktop.ModemManager1.Modem.Signal.xml
libmm-glib/: mm-cdma-manual-activation-properties.c  mm-location-gps-raw.c  mm-signal.c  mm-signal.h  mm-sms-properties.c
libqcdm/src/: Makefile.am  commands-private.h  commands.c  commands.h  dm-log-items.h  dm-nv-items.h  log-items.c  log-items.h
plugins/: Makefile.am  mm-plugin-generic.c  mm-plugin-huawei.c  mm-plugin-linktop.c  mm-plugin-zte.c
plugins/gobi/: mm-plugin-gobi.c
plugins/huawei/: mm-sim-huawei.c  (+4 more)
src/: 77-mm-usb-pots.rules  80-mm-candidate.rules  Makefile.am  main.c  mm-at-serial-port.c  mm-at-serial-port.h  mm-auth-provider-polkit.c  mm-auth-provider-polkit.h  mm-auth-provider.c  mm-auth-provider.h  mm-base-manager.c  mm-base-modem.c  mm-base-modem.h  mm-bearer-mbim.c  mm-bearer-qmi.c  mm-broadband-modem-mbim.c  mm-broadband-modem-qmi.c  mm-broadband-modem.c  mm-broadband-modem.h  mm-client-info.c  mm-client-info.h  mm-command-serial-port.c  mm-command-serial-port.h  mm-context.c  mm-context.h  mm-device.c  mm-gps-serial-port.c  mm-gps-serial-port.h  mm-iface-modem-cdma.c  mm-iface-modem-location.c  mm-iface-modem.c  mm-log.c  mm-manager.c  mm-manager.h  mm-modem-helpers.c  mm-modem-helpers.h  mm-plugin-base.c  mm-plugin-base.h  mm-plugin.c  mm-plugin.h  (+17 more)
(+20 files in other folders)
